# simple-file-system

./: CMakeLists.txt  README.md
src/: main.cpp
src/commands/: delete.cpp  delete.h  dir.cpp  dir.h  login.cpp  login.h  read.cpp  write.cpp  write.h
src/core/: cryptor.cpp  cryptor.h  users.cpp  users.h
test/src/core/: testCrypt.cpp
